Email sending, Account delete endpoint
